--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: var(--color-grey100);
+  background-color: var(--color-white);
   font-family: "Barlow Semi Condensed", sans-serif;
   min-height: 100vh;
   display: flex;
@@ -36,7 +36,7 @@ body {
 
 .cards > .feedback {
   height: auto;
-  box-shadow: 40px 35px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 40px 50px 30px rgba(25, 32, 45, 0.25);
   border-radius: 0.5rem;
   padding: 2rem;
 }
