--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: var(--color-white);
+  background-color: rgba(25, 32, 45, 0.1);
   font-family: "Barlow Semi Condensed", sans-serif;
   min-height: 100vh;
   display: flex;
