--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ body {
   padding: 2rem 0;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 .cards {
   display: flex;
   flex-direction: column;
